--- a/app/src/main/res/layout/fragment_travel_history.xml
+++ b/app/src/main/res/layout/fragment_travel_history.xml
@@ -4,27 +4,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:gravity="top">
-
-
-    <TextView
-        android:id="@+id/locationTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="8dp"
-        android:text="Location will appear here"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
+    android:background="?attr/colorBackground"> <!-- Theme-based background color -->
 
     <TextView
-        android:id="@+id/dateTimeTextView"
-        android:layout_width="match_parent"
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date and Time"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        android:gravity="center"
-        android:padding="8dp" />
+        android:layout_gravity="center"
+        android:text="DETAILS"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="?android:attr/textColorPrimary"
+    android:paddingBottom="16dp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/recordsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
