--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -1,57 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/colorBackground"
+    android:textColor="?attr/colorOnBackground"
 
-    <FrameLayout
-        android:id="@+id/map_view"
+    android:padding="16dp">
+
+    <TextView
+        android:id="@+id/headerText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MONITOR RIDER"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textColor="?attr/colorOnBackground"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
+
+    <View
+        android:id="@+id/placeholderView"
         android:layout_width="match_parent"
-        android:layout_height="746dp"
-        android:layout_marginBottom="0dp" />
+        android:layout_height="480dp"
+        android:background="?attr/colorSurface"
+        android:layout_below="@id/headerText"
+        android:layout_marginTop="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="-40dp"
-        android:orientation="horizontal"
-        android:padding="16dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/placeholderView"
+        android:layout_marginTop="20dp">
 
-        <ImageButton
-            android:id="@+id/circle"
-            android:layout_width="63dp"
-            android:layout_height="74dp"
-            android:contentDescription="@string/circle" />
+        <TextView
+            android:id="@+id/locationText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LOCATION: "
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColor="?attr/colorOnBackground" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/speedTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/speed_0_km_h"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/statusTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="8dp"
-                android:text="@string/status_normal"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <ImageButton
-            android:id="@+id/circle1"
-            android:layout_width="63dp"
-            android:layout_height="74dp"
-            android:contentDescription="@string/circle"
-            android:scaleType="centerInside" />
-
+        <TextView
+            android:id="@+id/speedText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SPEED: "
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_marginTop="15dp"
+            android:textColor="?attr/colorOnBackground" />
     </LinearLayout>
 </RelativeLayout>
