--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,10 +1,113 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.SettingsFragment">
+    android:padding="16dp"
+    android:background="@color/background_color">
 
-    <!-- TODO: Update blank fragment layout -->
 
-</FrameLayout>
+    <org.osmdroid.views.MapView
+        android:id="@+id/home_map"
+        android:layout_width="match_parent"
+        android:layout_height="500dp" />
+
+    <LinearLayout
+        android:id="@+id/bottom_layout"
+        android:layout_width="395dp"
+        android:layout_height="179dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/tv_location_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:text="Location Type: "
+            android:textColor="@color/text_color"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+
+
+        <TextView
+            android:id="@+id/tv_speed_limit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:text="Speed Limit: "
+            android:textColor="@color/text_color"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+
+
+        <TextView
+            android:id="@+id/tv_warning_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:text="Warning: You are exceeding the speed limit!"
+            android:textColor="@color/warning_color"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="2dp"
+            android:background="@android:color/darker_gray" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="97dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="-40dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="16dp">
+
+            <ImageButton
+                android:id="@+id/circle"
+                android:layout_width="63dp"
+                android:layout_height="74dp"
+                android:layout_marginEnd="0dp"
+                android:contentDescription="@string/circle" />
+
+            <LinearLayout
+                android:layout_width="200dp"
+                android:layout_height="78dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/speedTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/speed_0_km_h"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/statusTextView"
+                    android:layout_width="152dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
+                    android:paddingTop="8dp"
+                    android:text="@string/status_normal"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/circle1"
+                android:layout_width="63dp"
+                android:layout_height="74dp"
+                android:layout_marginEnd="0dp"
+                android:contentDescription="@string/circle"
+                android:scaleType="centerInside" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</RelativeLayout>
