--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,18 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="common_google_signin_btn_text_dark_pressed">#FF0000</color>
+    <color name="dark_gray">#333333</color>
+
+    <!-- setting -->
+    <color name="text_color">#000000</color>
+    <color name="warning_color">#D32F2F</color>
+    <color name="background_color">#FFFFFF</color>
+    <color name="button_color">#1976D2</color>
+
+    <!-- Monitoring -->
+    <color name="light_background">#FFFFFF</color>
+    <color name="light_on_background">#000000</color>
+    <color name="light_surface">#D3D3D3</color>
+
+
 </resources>
