--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -1,6 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:textColor="?attr/colorOnBackground"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:padding="16dp">
+
+    <TextView
+        android:id="@+id/headerText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/monitor_rider"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textColor="?attr/colorOnBackground"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
+
+    <View
+        android:id="@+id/placeholderView"
+        android:layout_width="match_parent"
+        android:layout_height="480dp"
+        android:background="?attr/colorSurface"
+        android:layout_below="@id/headerText"
+        android:layout_marginTop="20dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/placeholderView"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:id="@+id/locationText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LOCATION: "
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColor="?attr/colorOnBackground" />
+
+        <TextView
+            android:id="@+id/speedText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/speed"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_marginTop="15dp"
+            android:textColor="?attr/colorOnBackground" />
+    </LinearLayout>
+</RelativeLayout>
