--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -105,18 +105,80 @@
         app:layout_constraintTop_toBottomOf="@+id/show_location_btn"
         app:layout_constraintVertical_bias="0.033" />
 
-    <Button
-        android:id="@+id/startDrivingBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="START DRIVING"
-        android:textSize="18sp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/routeInfoContainer"
+        android:layout_width="245dp"
+        android:layout_height="131dp"
+        android:layout_marginTop="505dp"
+        android:background="@drawable/custom_input"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/navigateContainer"
-        app:layout_constraintVertical_bias="0.947" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9">
+
+        <Button
+            android:id="@+id/startDrivingBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="START DRIVING"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/textView6"
+            app:layout_constraintHorizontal_bias="0.135"
+            app:layout_constraintStart_toStartOf="@+id/textView6" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:text="DURATION:"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/startDrivingBtn"
+            app:layout_constraintEnd_toStartOf="@+id/durationLbl"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/textView5" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="DISTANCE:"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView6"
+            app:layout_constraintEnd_toStartOf="@+id/distanceInKmLbl"
+            app:layout_constraintHorizontal_bias="0.867"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/distanceInKmLbl"
+            android:layout_width="70dp"
+            android:layout_height="19dp"
+            android:layout_marginEnd="52dp"
+            android:text="value"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/durationLbl"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView5"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/durationLbl"
+            android:layout_width="70dp"
+            android:layout_height="19dp"
+            android:layout_marginEnd="52dp"
+            android:text="@string/value"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/startDrivingBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView6"
+            app:layout_constraintVertical_bias="0.0" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
