--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,14 +38,14 @@
             android:id="@+id/userDisplayName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="44dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="52dp"
             android:text="@string/user_name"
             android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/userProfilePic"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/userProfilePic"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/userDisplayEmail"
@@ -161,9 +161,12 @@
             android:inputType="text"
             android:paddingStart="18dp"
             android:paddingEnd="18dp"
+            app:layout_constraintBottom_toTopOf="@+id/loadingIndicator"
             app:layout_constraintEnd_toEndOf="@+id/userBirthDate"
+            app:layout_constraintHorizontal_bias="0.944"
             app:layout_constraintStart_toStartOf="@+id/userBirthDate"
             app:layout_constraintTop_toBottomOf="@+id/userBirthDate"
+            app:layout_constraintVertical_bias="0.105"
             tools:ignore="HardcodedText" />
 
         <Button
@@ -179,6 +182,18 @@
             app:layout_constraintStart_toStartOf="@+id/userAddress"
             app:layout_constraintTop_toBottomOf="@+id/userAddress"
             tools:ignore="HardcodedText" />
+
+        <ProgressBar
+            android:id="@+id/loadingIndicator"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="36dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/saveButton"
+            app:layout_constraintHorizontal_bias="0.786"
+            app:layout_constraintStart_toStartOf="@+id/userAddress" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
