--- a/app/src/main/res/layout/fragment_travel_history.xml
+++ b/app/src/main/res/layout/fragment_travel_history.xml
@@ -9,11 +9,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:paddingBottom="16dp"
         android:text="@string/details"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:textColor="?android:attr/textColorPrimary"
-        android:paddingBottom="16dp" />
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -26,6 +26,10 @@
             android:orientation="vertical"
             android:padding="8dp">
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/travelHistoryView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </LinearLayout>
     </ScrollView>
 
