--- a/app/src/main/res/layout/item_accident.xml
+++ b/app/src/main/res/layout/item_accident.xml
@@ -32,7 +32,7 @@
 
             <!-- Location -->
             <TextView
-                android:id="@+id/tv_location"
+                android:id="@+id/start_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Location"
