--- a/app/src/main/res/layout/fragment_driving_mode.xml
+++ b/app/src/main/res/layout/fragment_driving_mode.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="400dp"
         android:layout_height="96dp"
         android:layout_alignParentBottom="true"
@@ -153,4 +154,19 @@
             app:layout_constraintTop_toTopOf="@+id/textView11"
             app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/backToDrivingBtn"
+        android:layout_width="200dp"
+        android:layout_height="68dp"
+        android:text="BACK TO DRIVING"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.967" />
 </androidx.constraintlayout.widget.ConstraintLayout>
