--- a/app/src/main/res/layout/item_travel.xml
+++ b/app/src/main/res/layout/item_travel.xml
@@ -15,7 +15,7 @@
 
         <!-- Map Preview or Icon -->
         <ImageView
-            android:id="@+id/img_map"
+            android:id="@+id/accident_img"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginEnd="16dp"
@@ -30,7 +30,7 @@
 
             <!-- Location -->
             <TextView
-                android:id="@+id/start_location"
+                android:id="@+id/accident_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
